src/app/components/pages/navigation/Navigation.module.css
@import '../../../../variables.css';

.content {
  position: relative;

  display: flex;
  align-items: stretch;
  justify-content: flex-start;

  background-size: cover;

  overflow: hidden;
}

.backgroundDay {
  background-image: url('../../../static/svg/background_banner_day.svg');
}

.backgroundNight {
  background-image: url('../../../static/svg/background_banner_night.svg');
}

.content > h1 {
  /* Added just for screen reader, otherwise hidden visually */
  width: 0;
  height: 0;
  opacity: 0;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;

  width: 22.75rem;
  margin: 2rem 0 2rem 6.25rem;

  border-radius: var(--content-border-radius);
  box-shadow: 0 0 0.5rem 0 grey;
}

.tripSelectorContainer {
  height: 100%;

  border-radius: inherit;
}

.tripSelectorMap {
  display: none;
}

.detailsMap {
  position: absolute;

  inset: 0;
}

@media only screen and (max-width: 950px) {
  .content {
    background: none;
  }

  .container {
    display: block;

    width: 100%;
    margin: 0;

    border-radius: 0;
  }

  .tripSelectorContainer {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto 60%;
  }

  .tripSelectorMap {
    display: inline;
  }
}

